tests/neg/simple/fun-08.ts


/*@ bar :: (() => { number | v < 0 }) => { number | v > 0 } */
function bar(f) {
  return (typeof f === "function") ? f() : f;
}

